plugins {
    id 'java-library'
    id 'eclipse'
    id 'idea'
    id 'maven-publish'
    id 'net.neoforged.gradle.userdev' version '7.1.21'
}

version = "${mod_version}"
group = mod_group_id

repositories {
    mavenLocal()

    maven { // JEI
        url 'https://maven.blamejared.com'
        content {
            includeGroup "mezz.jei"
        }
    }

    //maven { //Curios
    //    url = "https://maven.theillusivec4.top/"
    //    content {
    //        includeGroup "top.theillusivec4.curios"
    //    }
    //}

    //maven { // mek
    //    url = 'https://modmaven.dev/'
    //    content {
    //        includeGroup "mekanism"
    //        includeGroup "appeng"
    //    }
    //}

    //maven { url = "https://www.cursemaven.com" } // curse mods
}

base {
    archivesName = mod_id
}

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(25))
        vendor.set(JvmVendorSpec.JETBRAINS)
    }
}

//minecraft.accessTransformers.entry public net.minecraft.client.Minecraft textureManager # textureManager

// Default run configurations.
runs {
    // Keep configureEach minimal to avoid eager realization of run types on NG 7.1
    configureEach {
        modSource project.sourceSets.main
    }

    client {
        systemProperty 'forge.logging.markers', 'REGISTRIES'
        systemProperty 'forge.logging.console.level', 'debug'
        systemProperty 'forge.enabledGameTestNamespaces', project.mod_id
        arguments.addAll '--username', 'Direwolf20'
    }

    // client2 — commented out during initial port, restore after base build is green
    //client2 {
    //    runType 'client'
    //    systemProperty 'forge.logging.markers', 'REGISTRIES'
    //    systemProperty 'forge.logging.console.level', 'debug'
    //    systemProperty 'forge.enabledGameTestNamespaces', project.mod_id
    //    arguments.addAll '--username', 'Direwolf21'
    //}

    server {
        systemProperty 'forge.logging.markers', 'REGISTRIES'
        systemProperty 'forge.logging.console.level', 'debug'
        systemProperty 'forge.enabledGameTestNamespaces', project.mod_id
        //arguments.add '--nogui'
    }

    gameTestServer {
        systemProperty 'forge.logging.markers', 'REGISTRIES'
        systemProperty 'forge.logging.console.level', 'debug'
        systemProperty 'forge.enabledGameTestNamespaces', project.mod_id
    }

    // Datagen is now split into clientData and serverData on 26.1
    clientData {
        systemProperty 'forge.logging.markers', 'REGISTRIES'
        systemProperty 'forge.logging.console.level', 'debug'
        arguments.addAll '--mod', project.mod_id, '--all',
                '--output', file('src/generated-client/resources/').getAbsolutePath(),
                '--existing', file('src/main/resources/').getAbsolutePath(),
                '--existing', file('src/generated-data/resources/').getAbsolutePath()
    }

    serverData {
        systemProperty 'forge.logging.markers', 'REGISTRIES'
        systemProperty 'forge.logging.console.level', 'debug'
        arguments.addAll '--mod', project.mod_id, '--all',
                '--output', file('src/generated-data/resources/').getAbsolutePath(),
                '--existing', file('src/main/resources/').getAbsolutePath(),
                '--existing', file('src/generated-client/resources/').getAbsolutePath()
    }
}

// Include resources generated by data generators (now split into two dirs on 26.1).
sourceSets.main.resources {
    srcDir 'src/generated-client/resources'
    srcDir 'src/generated-data/resources'
}


dependencies {
    implementation "net.neoforged:neoforge:${neo_version}"

    // JEI
    compileOnly "mezz.jei:jei-${jei_mc_version}-common-api:${jei_version}"
    compileOnly "mezz.jei:jei-${jei_mc_version}-neoforge-api:${jei_version}"
    runtimeOnly "mezz.jei:jei-${jei_mc_version}-neoforge:${jei_version}"
}

// This block of code expands all declared replace properties in the specified resource targets.
// A missing property will result in an error. Properties are expanded using ${} Groovy notation.
tasks.withType(ProcessResources).configureEach {
    var replaceProperties = [
            minecraft_version   : minecraft_version, minecraft_version_range: minecraft_version_range,
            neo_version         : neo_version, neo_version_range: neo_version_range,
            loader_version_range: loader_version_range,
            mod_id              : mod_id, mod_name: mod_name, mod_license: mod_license, mod_version: mod_version,
            mod_authors         : mod_authors, mod_description: mod_description,
    ]
    inputs.properties replaceProperties

    filesMatching(['META-INF/neoforge.mods.toml']) {
        expand replaceProperties + [project: project]
    }
}

// Example configuration to allow publishing using the maven-publish plugin
publishing {
    publications {
        register('mavenJava', MavenPublication) {
            from components.java
        }
    }
    repositories {
        maven {
            url "file://${project.projectDir}/repo"
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8' // Use the UTF-8 charset for Java compilation
}
